0029968: Modeling Algorithms - BRepAlgoAPI_Cut produces an empty result with half-space

IntTools_Context::IsInfiniteFace() - Make the conclusion about infinity of the face basing on its bounding box only. No need to check NaturalRestriction flag.